--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,8 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
+    --chart-1: 135.1, 58.4%, 45.3%;
+    --chart-2: 135.2, 57.9%, 33.5%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
